--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://use.typekit.net/twe3knn.css">
     <title>Document</title>
     <script src="script.js" defer></script>
 </head>
 <body>
-    <button>Click for art</button>
+    <button class="button">Click for knowledge</button>
     <main>
-        
     </main>
 </body>
 </html>
